--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
 			name="keywords"
 			content="Eki, Eki Zulfar,Eki Zulfar Rachman, siapa Eki, Eki adalah , Siapa Eki Zulfar , ekizr" />
 		<meta name="mobile-web-app-capable" content="yes" />
-		<meta name="title" content="Adrian Lim - Profil Pengembang Front-End Web" />
+		<meta name="title" content="Ivan Nailsen" />
 		<meta
 			name="description"
 			content="Selamat datang di website saya! Saya adalah Adrian Lim, atau panggil saja saya 'Drian.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini" />
 
 		<!-- Open Graph / Facebook -->
-		<meta property="og:type" content="website" />
+		<!-- <meta property="og:type" content="website" />
 		<meta property="og:url" content="https://ekizr.vercel.app/" />
-		<meta property="og:title" content="Eki Zulfar Rachman - Profil Pengembang Front-End Web" />
+		<meta property="og:title" content="Adrian Lim - Profil Pengembang Front-End Web" />
 		<meta
 			property="og:description"
 			content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini" />
-		<meta property="og:image" content="https://ekizr.vercel.app/ImgWeb.png" />
+		<meta property="og:image" content="https://ekizr.vercel.app/ImgWeb.png" /> -->
 
 		<!-- Twitter -->
-		<meta property="twitter:card" content="summary_large_image" />
+		<!-- <meta property="twitter:card" content="summary_large_image" />
 		<meta property="twitter:url" content="https://ekizr.vercel.app/" />
 		<meta property="twitter:title" content="Eki Zulfar Rachman - Profil Pengembang Front-End Web" />
 		<meta
 			property="twitter:description"
 			content="Selamat datang di website saya! Saya adalah Eki Zulfar Rachman, atau panggil saja saya 'EKI.' Saya adalah seorang pengembang web dengan fokus pada menciptakan antarmuka pengguna yang menarik dan responsif. Temukan lebih banyak tentang karya-karya saya di sini" />
-		<meta property="twitter:image" content="https://ekizr.vercel.app/ImgWeb.png" />
+		<meta property="twitter:image" content="https://ekizr.vercel.app/ImgWeb.png" /> -->
 
 		<!-- Meta Tags Generated with https://metatags.io -->
 
@@ -49,7 +49,7 @@
 		<!-- iOS Safari -->
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="#001b38" />
-		<title>Adrian Lim</title>
+		<title>Ivan Nailsen</title>
 	</head>
 	<body>
 		<div id="root"></div>
